@@ -1,47 +1,0 @@
-name: Windows Build
-
-on: [push, pull_request]
-
-jobs:
-  build:
-
-    runs-on: windows-latest
-
-    strategy:
-      matrix:
-        python-version: ['3.9', '3.10', '3.11', '3.12']
-        windows-arch: ['x86', 'x64']
-
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-        architecture: ${{ matrix.windows-arch }}
-
-    - name: Install build tools
-      run: |
-        python --version
-        python -c "import struct; print(struct.calcsize('P') * 8)"
-        python -m pip install --upgrade pip
-        pip install -r dev-requirements.txt
-
-        choco install swig --version 2.0.12 --allow-empty-checksums --yes --limit-output
-        swig -version
-
-    - name: Build
-      run: |
-        python -m build
-        python -m pip install .
-
-    - name: Tests
-      run: |
-        cd test
-        python -m unittest
-
-    - uses: actions/upload-artifact@v4
-      with:
-        name: wheel-${{ matrix.python-version }}-${{ matrix.windows-arch }}
-        path: dist/*.whl
